--- a/app/views/short_links/_short_link.html.erb
+++ b/app/views/short_links/_short_link.html.erb
@@ -1,28 +1,32 @@
 <div id="<%= dom_id short_link %>">
- <table>
-    <tr>
-      <th>Short Url</th>
-      <th>Url</th>
-      <th>Expiration Date</th>
-      <th>Password</th>
-      <th>Usages</th>
-    </tr>
-    <tr>
-      <td>
-        <%= short_link.short_url %>
-      </td>
-      <td>
-        <%= short_link.url %>
-      </td>
-      <td>
-        <%= short_link.expiration_date %>
-      </td>
-      <td>
-        <%= short_link.password %>
-      </td>
-      <td>
-        <%= short_link.usages %>
-      </td>
-    </tr>
+ <table class="table-fixed">
+    <thead>
+      <tr>
+        <th>Short Url</th>
+        <th>Url</th>
+        <th>Expiration Date</th>
+        <th>Password</th>
+        <th>Usages</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <%= short_link.short_url %>
+        </td>
+        <td>
+          <%= short_link.url %>
+        </td>
+        <td>
+          <%= short_link.expiration_date %>
+        </td>
+        <td>
+          <%= short_link.password %>
+        </td>
+        <td>
+          <%= short_link.usages %>
+        </td>
+      </tr>
+    </tbody>
   </table> 
 </div>
