--- a/app/views/short_links/edit.html.erb
+++ b/app/views/short_links/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this short link", @short_link %> |
-  <%= link_to "Back to short links", short_links_path %>
+  <%= button_to "Show", @short_link, method: :get, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+  <%= button_to "Back", root_path, method: :get, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
 </div>
