Added tailwind and started to polish the views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <nav class="bg-gray-800">
           <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
               <div class="relative flex h-16 items-center justify-between">
-                  <p class="text-2xl font-['Lobster'] text-white">CHQ.TO</p>
+                  <a href="<%root_path%>" class="text-2xl font-['Lobster'] text-white">CHQ.TO</a>
                   <div class="absolute inset-y-0 right-0 flex items-center">
                       <% if user_signed_in? %>
                           <%= button_to "Log Out", 'users/sign_out', method: :delete, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded" %>
@@ -38,7 +38,7 @@
       </main>
       <footer class="bg-gray-800 rounded-lg shadow m-4">
         <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-          <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/" class="hover:underline text-base font-['Lobster'] text-white">CHQ.TO</a>. All Rights Reserved.
+          <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="<%root_path%>" class="hover:underline text-base font-['Lobster'] text-white">CHQ.TO</a>. All Rights Reserved.
           </span>
           <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
               <li>
