--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,13 @@
         <nav class="bg-gray-800">
           <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
               <div class="relative flex h-16 items-center justify-between">
-                  <a href="<%root_path%>" class="text-2xl font-['Lobster'] text-white">CHQ.TO</a>
+                  <%= link_to "CHQ.TO", root_path, class: "text-2xl font-['Lobster'] text-white" %>
                   <div class="absolute inset-y-0 right-0 flex items-center">
                       <% if user_signed_in? %>
-                          <%= button_to "Log Out", 'users/sign_out', method: :delete, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded" %>
+                          <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded" %>
                       <% else %>
-                          <%= button_to "Log In", 'users/sign_in', method: :get, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 mr-4 rounded" %>
-                          <%= button_to "Sign Up", 'users/sign_up', method: :get, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded" %>
+                          <%= button_to "Log In", new_user_session_path, method: :get, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 mr-4 rounded" %>
+                          <%= button_to "Sign Up", new_user_registration_path, method: :get, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded" %>
                       <% end %>
                   </div>
               </div>
