--- a/app/views/short_links/show.html.erb
+++ b/app/views/short_links/show.html.erb
@@ -1,10 +1,29 @@
+<div>
 <p style="color: green"><%= notice %></p>
 
+<div class="flex items-center text-center justify-center">
+  <%= button_to "Edit", edit_short_link_path(@short_link), method: :get, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded m-2" %>
+  <%= button_to "Back", root_path, method: :get, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded m-2" %>
+
+  <%= button_to "Delete", @short_link, method: :delete, class: "bg-rose-500 hover:bg-rose-700 text-white font-bold py-2 px-4 rounded m-2" %>
+</div>
+
+<div id="short_link">
+            <div class="flex items-center text-center justify-center">
+                <table class="table-fixed w-3/6 bg-white-500 border-separate border-spacing-1 border-collapse border border-slate-500 mt-2">
+                    <thead>
+                    <tr>
+                        <th class="border border-slate-600">Short Url</th>
+                        <th class="border border-slate-600">Url</th>
+                        <th class="border border-slate-600">Expiration Date</th>
+                        <th class="border border-slate-600">Password</th>
+                        <th class="border border-slate-600">Usages</th>
+                    </tr>
+                    </thead>
+                    <tbody>
 <%= render @short_link %>
-
-<div>
-  <%= button_to "Edit", edit_short_link_path(@short_link), method: :get, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded" %>
-  <%= button_to "Back", root_path, method: :get, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded" %>
-
-  <%= button_to "Delete", @short_link, method: :delete, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded" %>
+                    </tbody>
+                </table>
+                </div>
+                </div>
 </div>
