--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,13 @@
-<h2>Forgot your password?</h2>
-
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :email, class:"block text-gray-700 text-sm font-bold"%><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"shadow appearance-none border rounded text-gray-700 leading-tight focus:outline-none focus:shadow-outline mb-8" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= button_to f.submit "Reset password", class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded mt-4" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
