--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,29 @@
 
 <div class="w-full max-w-xs">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4") do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "bg-white shadow-md rounded") do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field">
-      <%= f.label :email, class:"block text-gray-700 text-sm font-bold mt-4" %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"shadow appearance-none border rounded text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
+      <%= f.label :email, class:"block text-gray-700 text-sm font-bold" %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"shadow appearance-none border rounded text-gray-700 leading-tight focus:outline-none focus:shadow-outline mb-8" %>
     </div>
 
     <div class="field">
-      <%= f.label :password, class:"block text-gray-700 text-sm font-bold mt-4" %>
+      <%= f.label :password, class:"block text-gray-700 text-sm font-bold" %>
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", class:"shadow appearance-none border rounded text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
+      <%= f.password_field :password, autocomplete: "new-password", class:"shadow appearance-none border rounded text-gray-700 leading-tight focus:outline-none focus:shadow-outline mb-8" %>
     </div>
 
     <div class="field">
-      <%= f.label :password_confirmation, class:"block text-gray-700 text-sm font-bold mt-4" %><br />
+      <%= f.label :password_confirmation, class:"block text-gray-700 text-sm font-bold" %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"shadow appearance-none border rounded text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
     </div>
 
     <div class="actions">
-      <%= f.submit "Sign up" %>
+      <%= button_to f.submit "Sign Up", class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded mt-4" %>
     </div>
   <% end %>
-
-  <%= render "devise/shared/links" %>
 </div>
 
