--- a/app/views/short_links/new.html.erb
+++ b/app/views/short_links/new.html.erb
@@ -1,9 +1,2 @@
-<h1>New short link</h1>
-
-<%= render "form", short_link: @short_link %>
-
-<br>
-
-<div>
-  <%= button_to "Back", root_path, method: :get, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>  
-</div>
+<%= render "form", short_link: @short_link, is_edit: false %>
+ 
