--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,22 +6,23 @@
 
         <h1 class="text-2xl font-bold underline text-center mr-5">Short links</h1>
 
-        <%= button_to "+", new_short_link_path, method: :get, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+        <%= button_to "+", new_short_link_path, method: :get, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded" %>
 
     </div>
 
     <div id="short_links">
         <% if @short_links %>
             <div class="flex items-center text-center justify-center">
-                <table class="table-fixed w-3/6 bg-white-500 border-separate border-spacing-1 border-collapse border border-slate-500 mt-2">
-                    <thead>
-                    <tr>
-                        <th class="border border-slate-600">Short Url</th>
-                        <th class="border border-slate-600">Url</th>
-                        <th class="border border-slate-600">Expiration Date</th>
-                        <th class="border border-slate-600">Password</th>
-                        <th class="border border-slate-600">Usages</th>
-                    </tr>
+                <table class="table-fixed w-4/6 bg-white-500 border-collapse border-spacing-1 border-collapse border border-slate-500 mt-2">
+                    <thead class="bg-sky-400">
+                        <tr>
+                            <th class="border border-slate-600">Short Url</th>
+                            <th class="border border-slate-600">Url</th>
+                            <th class="border border-slate-600">Expiration Date</th>
+                            <th class="border border-slate-600">Password</th>
+                            <th class="border border-slate-600">Usages</th>
+                            <th class="border border-slate-600">Action</th>
+                        </tr>
                     </thead>
                     <tbody>
                         <% @short_links.each do |short_link| %>
