--- a/app/views/short_links/show.html.erb
+++ b/app/views/short_links/show.html.erb
@@ -1,8 +1,8 @@
 <div>
     <div id="short_link">
         <div class="flex items-center text-center justify-center">
-            <table class="table-fixed w-3/6 bg-white-500 border-separate border-spacing-1 border-collapse border border-slate-500 mt-2">
-                <thead>
+            <table class="table-fixed w-4/6 bg-white-500 border-collapse border-spacing-1 border-collapse border border-slate-500 mt-2">
+                <thead class="bg-sky-400">
                 <tr>
                     <th class="border border-slate-600">Short Url</th>
                     <th class="border border-slate-600">Url</th>
@@ -14,10 +14,10 @@
                 <tbody>
                     <tr>
                         <td class="border border-slate-700">
-                            <%= @short_link.short_url %>
+                            <%= link_to @short_link.short_url, @short_link.short_url, class: "text-sky-700 hover:underline hover:text-sky-900" %>
                         </td>
                         <td class="border border-slate-700">
-                            <%= @short_link.url %>
+                            <%= link_to @short_link.url, @short_link.url, class: "text-sky-700 hover:underline hover:text-sky-900" %>
                         </td>
                         <td class="border border-slate-700">
                             <%= @short_link.expiration_date ? @short_link.expiration_date : "N/A"%>
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div class="flex items-center text-center justify-center">
+    <div class="flex items-center text-center justify-center mt-4">
         <%= button_to "Edit", edit_short_link_path(@short_link), method: :get, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded m-2" %>
         <%= button_to "Back", root_path, method: :get, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded m-2" %>
 
