Short links now can be accessed

--- a/app/views/short_links/show.html.erb
+++ b/app/views/short_links/show.html.erb
@@ -14,7 +14,7 @@
                 <tbody>
                     <tr>
                         <td class="border border-slate-700">
-                            <%= link_to @short_link.short_url, @short_link.short_url, class: "text-sky-700 hover:underline hover:text-sky-900" %>
+                            <%= link_to "http://chq.to/l/" + @short_link.short_url, "http://127.0.0.1:3000/l/" + @short_link.short_url, class: "text-sky-700 hover:underline hover:text-sky-900" %>
                         </td>
                         <td class="border border-slate-700">
                             <%= link_to @short_link.url, @short_link.url, class: "text-sky-700 hover:underline hover:text-sky-900" %>
