--- a/app/views/short_links/access.html.erb
+++ b/app/views/short_links/access.html.erb
@@ -1,6 +1,75 @@
-<div class="flex items-center text-center justify-center">
-    <h1 class="text-xl font-bold text-center mr-2">Redirecting to: </h1>
-    <meta http-equiv="REFRESH" content="5; url=http://<%= @short_link.url %>" %="">
-    <%= link_to @short_link.url, "http://#{@short_link.url}", class: "text-sky-700 text-xl hover:underline hover:text-sky-900" %>
-    <h1 class="text-xl font-bold text-center ml-2"> in 5 seconds.</h1>
-</div>
+<% if !@short_link.expiration_date and @short_link.password == "" and !@short_link.usages %>
+    
+    <div class="flex items-center text-center justify-center">
+        <h1 class="text-xl font-bold text-center mr-2">Redirecting to: </h1>
+        <meta http-equiv="REFRESH" content="5; url=<%= @short_link.url %>" %="">
+        <%= link_to @short_link.url, @short_link.url, class: "text-sky-700 text-xl hover:underline hover:text-sky-900" %>
+        <h1 class="text-xl font-bold text-center ml-2"> in 5 seconds.</h1>
+    </div>
+
+<% else %>
+
+    <% if  @short_link.expiration_date and @short_link.expiration_date.to_date <= Date.today  %>
+
+        <div class="flex items-center bg-sky-500 text-white text-sm font-bold px-4 py-3" role="alert">
+            <svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M12.432 0c1.34 0 2.01.912 2.01 1.957 0 1.305-1.164 2.512-2.679 2.512-1.269 0-2.009-.75-1.974-1.99C9.789 1.436 10.67 0 12.432 0zM8.309 20c-1.058 0-1.833-.652-1.093-3.524l1.214-5.092c.211-.814.246-1.141 0-1.141-.317 0-1.689.562-2.502 1.117l-.528-.88c2.572-2.186 5.531-3.467 6.801-3.467 1.057 0 1.233 1.273.705 3.23l-1.391 5.352c-.246.945-.141 1.271.106 1.271.317 0 1.357-.392 2.379-1.207l.6.814C12.098 19.02 9.365 20 8.309 20z"/></svg>
+            <p>The link that you are trying to access has expired.</p>
+        </div>
+
+    <% else %>
+
+        <% if @short_link.usages and @short_link.usages.to_i <= 0 %>
+
+            <div class="flex items-center bg-sky-500 text-white text-sm font-bold px-4 py-3" role="alert">
+                <svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M12.432 0c1.34 0 2.01.912 2.01 1.957 0 1.305-1.164 2.512-2.679 2.512-1.269 0-2.009-.75-1.974-1.99C9.789 1.436 10.67 0 12.432 0zM8.309 20c-1.058 0-1.833-.652-1.093-3.524l1.214-5.092c.211-.814.246-1.141 0-1.141-.317 0-1.689.562-2.502 1.117l-.528-.88c2.572-2.186 5.531-3.467 6.801-3.467 1.057 0 1.233 1.273.705 3.23l-1.391 5.352c-.246.945-.141 1.271.106 1.271.317 0 1.357-.392 2.379-1.207l.6.814C12.098 19.02 9.365 20 8.309 20z"/></svg>
+                <p>The link that you are trying to access has no usages left.</p>
+            </div>
+
+        <% else %>
+
+            <% if @short_link.password != "" and @password_validated == false %>
+
+                <div class="w-full max-w-xs">
+                    <div class="flex items-center bg-sky-500 text-white text-sm font-bold px-4 py-3" role="alert">
+                        <svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M12.432 0c1.34 0 2.01.912 2.01 1.957 0 1.305-1.164 2.512-2.679 2.512-1.269 0-2.009-.75-1.974-1.99C9.789 1.436 10.67 0 12.432 0zM8.309 20c-1.058 0-1.833-.652-1.093-3.524l1.214-5.092c.211-.814.246-1.141 0-1.141-.317 0-1.689.562-2.502 1.117l-.528-.88c2.572-2.186 5.531-3.467 6.801-3.467 1.057 0 1.233 1.273.705 3.23l-1.391 5.352c-.246.945-.141 1.271.106 1.271.317 0 1.357-.392 2.379-1.207l.6.814C12.098 19.02 9.365 20 8.309 20z"/></svg>
+                        <p>This link is password protected.</p>
+                    </div>
+
+                    <% if @messages != "" %>
+
+                        <div class="flex items-center bg-sky-500 text-white text-sm font-bold px-4 py-3" role="alert">
+                            <svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M12.432 0c1.34 0 2.01.912 2.01 1.957 0 1.305-1.164 2.512-2.679 2.512-1.269 0-2.009-.75-1.974-1.99C9.789 1.436 10.67 0 12.432 0zM8.309 20c-1.058 0-1.833-.652-1.093-3.524l1.214-5.092c.211-.814.246-1.141 0-1.141-.317 0-1.689.562-2.502 1.117l-.528-.88c2.572-2.186 5.531-3.467 6.801-3.467 1.057 0 1.233 1.273.705 3.23l-1.391 5.352c-.246.945-.141 1.271.106 1.271.317 0 1.357-.392 2.379-1.207l.6.814C12.098 19.02 9.365 20 8.309 20z"/></svg>
+                            <p>Incorrect password.</p>
+                        </div>
+
+                    <% end %>
+
+                    <%= form_with do |form| %>
+                        <div>
+                            <%= form.label :password, style: "display: block", class:"block text-gray-700 text-sm font-bold" %>
+                            <%= form.password_field :password, class:"shadow appearance-none border rounded text-gray-700 leading-tight focus:outline-none focus:shadow-outline mb-8" %>
+                        </div>
+                        <td class="border border-slate-700">        
+                            <%= button_to "redirect", "http://chq.to/l/" + @short_link.short_url,  method: :post, class:"bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" %>
+                        </td>
+                    <% end %>
+                </div>
+
+            <% else %>
+
+                <div class="flex items-center text-center justify-center">
+                    <h1 class="text-xl font-bold text-center mr-2">Redirecting to: </h1>
+                    <meta http-equiv="REFRESH" content="5; url=<%= @short_link.url %>" %="">
+                    <%= link_to @short_link.url, @short_link.url, class: "text-sky-700 text-xl hover:underline hover:text-sky-900" %>
+                    <h1 class="text-xl font-bold text-center ml-2"> in 5 seconds.</h1>
+
+                    <%= decrease_usages %>
+                </div>
+
+            <% end %>
+
+        <% end %>
+
+    <% end %>
+
+<% end %>
