--- a/app/views/short_links/_short_link.html.erb
+++ b/app/views/short_links/_short_link.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td class="border border-slate-700">
-    <%= link_to "http://chq.to/l/" + short_link.short_url, "http://127.0.0.1:3000/l/" + short_link.short_url, class: "text-sky-700 hover:underline hover:text-sky-900", target: :_blank %>
+    <%= link_to "http://chq.to/l/" + short_link.short_url, "http://#{request.host}:3000/l/" + short_link.short_url, class: "text-sky-700 hover:underline hover:text-sky-900", target: :_blank %>
   </td>
   <td class="border border-slate-700">
     <%= link_to short_link.url, short_link.url, class: "text-sky-700 hover:underline hover:text-sky-900", target: :_blank %>
@@ -14,7 +14,27 @@
   <td class="border border-slate-700">
     <%= short_link.usages ? short_link.usages : "N/A"%>
   </td>
-  <td class="border border-slate-700">        
-    <%= button_to "Show", short_link, method: :get, class: "bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded" %>
+  <td class="border border-slate-700">
+    <div>
+      <%= button_to "reports/#{short_link.id}", action: "show", controller: "report", method: :get, class: 'float-left ml-6' do %>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8 text-sky-500 hover:text-sky-700">
+          <path d="M8.25 10.875a2.625 2.625 0 1 1 5.25 0 2.625 2.625 0 0 1-5.25 0Z" />
+          <path fill-rule="evenodd" d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm-1.125 4.5a4.125 4.125 0 1 0 2.338 7.524l2.007 2.006a.75.75 0 1 0 1.06-1.06l-2.006-2.007a4.125 4.125 0 0 0-3.399-6.463Z" clip-rule="evenodd" />
+        </svg>
+      <% end %>
+
+      <%= button_to edit_short_link_path(short_link.id), method: :get, class: 'float-left ml-8' do %>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8 text-green-500 hover:text-green-700">
+          <path d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-8.4 8.4a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32l8.4-8.4Z" />
+          <path d="M5.25 5.25a3 3 0 0 0-3 3v10.5a3 3 0 0 0 3 3h10.5a3 3 0 0 0 3-3V13.5a.75.75 0 0 0-1.5 0v5.25a1.5 1.5 0 0 1-1.5 1.5H5.25a1.5 1.5 0 0 1-1.5-1.5V8.25a1.5 1.5 0 0 1 1.5-1.5h5.25a.75.75 0 0 0 0-1.5H5.25Z" />
+        </svg>
+      <% end %>
+
+      <%= button_to short_link, method: :delete, class: 'float-left ml-8', form: {data: {turbo_confirm: 'Are you sure you want to delete this Short link?'}} do %>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 text-red-500 hover:text-red-700">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+        </svg>
+      <% end %>
+    </div>
   </td>
 </tr>
