--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,17 +38,17 @@
       </main>
       <footer class="bg-gray-800 rounded-lg shadow m-4">
         <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-          <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="<%root_path%>" class="hover:underline text-base font-['Lobster'] text-white">CHQ.TO</a> all Rights Reserved.
+          <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <%= link_to "CHQ.TO", root_path, class: "hover:underline text-base font-['Lobster'] text-white" %> all Rights Reserved.
           </span>
           <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
               <li>
-                  <a href="#" class="hover:underline me-4 md:me-6">About</a>
+                  <%= button_to "About", "#", class: "hover:underline me-4 md:me-6", form: {data: {turbo_confirm: 'This is just for the looks (:'}} %>
               </li>
               <li>
-                  <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+                  <%= button_to "Licensing", "#", class: "hover:underline me-4 md:me-6", form: {data: {turbo_confirm: 'This is just for the looks (:'}} %>
               </li>
               <li>
-                  <a href="#" class="hover:underline">Contact</a>
+                  <%= button_to "Contact", "#", class: "hover:underline me-4 md:me-6", form: {data: {turbo_confirm: 'This is just for the looks (:'}} %>
               </li>
           </ul>
         </div>
